--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kpuc1997.github.io/otr",
+  "homepage": "http://rails.kyleclapper.com",
   "name": "otr",
   "version": "0.1.0",
   "private": true,
