Ready to deploy

--- a/adminpanel/package.json
+++ b/adminpanel/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rails.kyleclapper.com",
+  "homepage": "https://offtherailsradio.org/admin",
   "name": "otr",
   "version": "0.1.0",
   "private": true,
